--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node index.js"
+    "start:dev": "nodemon --exec babel-node index.js",
+    "start:dist": "webpack --mode production & node ./dist/main.js",
+    "start": "node main.js",
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +29,9 @@
     "nodemon": "^3.1.4",
     "swagger-cli": "^4.0.4",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   }
 }
